<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        >

    <CheckBoxPreference
            android:key="KEY_DOWNLOAD_RETINA_IMAGE"
            android:title="@string/retina_image"
            android:defaultValue="true"
            android:summary="@string/retina_image_summary"
            />

    <CheckBoxPreference
            android:key="KEY_ONLY_WIFI_DOWNLOAD"
            android:title="@string/only_wifi_download"
            android:defaultValue="true"
            android:summary="@string/only_wifi_download_summary"
            />

    <PreferenceCategory
            android:title="@string/cache">

        <!--<CheckBoxPreference-->
                <!--android:key="KEY_AUTO_DOWNLOAD"-->
                <!--android:title="@string/auto_download"-->
                <!--android:summary="@string/auto_download_summary"-->
                <!--android:defaultValue="true"-->
                <!--/>-->

        <Preference
                android:key="KEY_CLEAR_CACHE"
                android:title="@string/clear_cache"
                android:summary="@string/clear_cache_summary"
                />
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/about">
        <Preference
                android:key="KEY_DONATE"
                android:title="@string/donate"
                android:summary="@string/donate_summary"
                />

        <Preference
                android:key="KEY_FEEDBACK"
                android:title="@string/feedback"
                android:summary="@string/feedback_summary"
                />

        <Preference
                android:key="KEY_ABOUT"
                android:title="@string/version"
                android:summary="@string/about_summary"
                />
    </PreferenceCategory>
</PreferenceScreen>
