<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/action_share"
            android:icon="@android:drawable/ic_menu_share"
            android:showAsAction="always"
            android:title="@string/Share"/>

    <item
            android:id="@+id/action_save"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/Save"/>

    <!--<item-->
    <!--android:id="@+id/action_online"-->
    <!--android:icon="@android:drawable/ic_menu_help"-->
    <!--android:title="@string/view_at_online"/>-->

    <item
            android:id="@+id/action_pref"
            android:title="@string/Preference"/>

    <!--<item-->
            <!--android:id="@+id/action_feedback"-->
            <!--android:showAsAction="never"-->
            <!--android:title="@string/feedback"/>-->

    <!--<item-->
            <!--android:id="@+id/action_donate"-->
            <!--android:showAsAction="never"-->
            <!--android:title="@string/donate"/>-->

    <!--<item-->
            <!--android:id="@+id/action_about"-->
            <!--android:showAsAction="never"-->
            <!--android:title="@string/about"/>-->
</menu>
